2004-12-30  Guilhem Lavaux  <guilhem@kaffe.org>

	* include/Makefile.am
	(NOINSTALL_DERIVED_HDRS): Added java_lang_VMClassLoader.h.

	* configure.ac: Removed the detection of broken setsockopt.

	* kaffe/kaffevm/jni/jni-string.c
	(KaffeJNI_NewStringUTF): If data is NULL we should return NULL
	directly.

	* kaffe/kaffevm/systems/unix-pthreads/syscalls.c
	(jthreadedAccept): Use the old implementation using select all the
	time. It looks like being the only really working way of handling
	timeouts.

	* libraries/clib/native/ClassLoader.c: Include
	java_lang_VMClassLoader.h to fix some warnings.
	
	* configure, include/Makefile.in, config/config.h.in,
	libltdl/ltdl.c: Regenerated.

2004-12-30  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/systems/unix-jthreads/jsignal.h,
	kaffe/kaffevm/systems/unix-jthreads/signal.c:
	Brought back ignoreSignal as a global symbol but renamed it to
	KaffeJThread_ignoreSignal.

2004-12-29  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/gtypes.h: New intp type for signed integer that may
	represent pointers.

	* kaffe/kaffevm/thread.c
	(nameThread): Check that the thread has been linked before returning
	the name.

	* kaffe/kaffevm/kaffe-gc/gc-mem.c
	(page_alloc): Use intp instead of intptr_t as it is not available on
	all systems.
	
	* kaffe/kaffevm/kaffe-gc/gc-refs.c
	(TwalkLiveThreads): Reuse jthread_walkLiveThreads_r to highlight the
	bug on SMP.

	* kaffe/kaffevm/systems/unix-jthreads/jsignal.h: Removed ignoreSignal.

	* kaffe/kaffevm/systems/unix-pthreads/syscalls.c
	(jthreadedForkExec): Save the old sigmask and restore it after fork.

	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c
	(jthread_create): Cleanup the thread queue if pthread_create fails.
	(jthread_suspendall): Temporarily changed logic to insure that all
	concerned threads receive the signal.

2004-12-29  Guilhem Lavaux  <guilhem@kaffe.org>

	* config/sparc/jit-sparc.def: Renamed setEpilogueLabel to match the
	new symbol names.
