@@ -1,3 +1,15 @@
+2004-12-31  Dalibor Topic  <robilad@kaffe.org>
+
+	* libraries/javalib/Makefile.am.in (LD_LIBRARY_PATH): Added to
+	fix bootstrap problems on OpenBSD.
+
+	Reported by:  Riccardo Mottola <rmottola@users.sf.net>
+	Suggested by:  Guilhem Lavaux  <guilhem@kaffe.org>
+
+	* libraries/javalib/Makefile.am,
+	libraries/javalib/Makefile.in:
+	Regenerated.
+	
 2004-12-30  Guilhem Lavaux  <guilhem@kaffe.org>
 
 	* include/Makefile.am
